tests/ui/retry_missing_args.stderr
error: custom attribute panicked
  --> tests/ui/retry_missing_args.rs:17:1
   |
17 | #[retry]
   | ^^^^^^^^
   |
   = help: message: retry macro requires arguments of ExponentialBackoffConfig and 'should retry' function: Error("unexpected end of input, expected identifier")
